--- a/index.html
+++ b/index.html
@@ -572,7 +572,7 @@ The above copyright notice and this permission notice shall be included in all c
          <!-- Contact -->
          <div class="section landing-section" id="contact">
             <div class="container">
-               <div class="row">
+               <div class="row" id="contact-form-row">
                   <div class="col-md-8 ml-auto mr-auto">
                      <h2 class="text-center">Lets create together!</h2>
                      <form class="contact-form" id="contact-form">
@@ -610,6 +610,29 @@ The above copyright notice and this permission notice shall be included in all c
                            </div>
                         </div>
                      </form>
+                  </div>
+               </div>
+
+               <div class="row" id="contact-form-sent-progress" style="display: none;margin: 15px 0 15px 0;">
+                  <div class="col-md-8 ml-auto mr-auto">
+                     <div class="progress">
+                        <div
+                           class="progress-bar progress-bar-striped bg-info"
+                           role="progressbar"
+                           style="width: 0%;"
+                           aria-valuenow="0"
+                           aria-valuemin="0"
+                           aria-valuemax="100"
+                           id="contact-form-progress-bar"
+                        ></div>
+                     </div>
+                  </div>
+               </div>
+
+               <div class="row" id="contact-form-sent" style="display: none;">
+                  <div class="col-md-8 ml-auto mr-auto text-center">
+                     <h1>Thank you!</h1>
+                     <h2>I will contact you shortly</h2>
                   </div>
                </div>
             </div>
@@ -666,7 +689,7 @@ The above copyright notice and this permission notice shall be included in all c
          </div>
       </div>
       <!-- popup -->
-      <div id="content-wrapper1" class="content-wrapper">Try clicking the card 10 times!</div>
+      <div id="content-wrapper1" class="content-wrapper" hidden>Try clicking the card 10 times!</div>
 
       <!--   Core JS Files   -->
       <script src="./assets/js/core/jquery.min.js" type="text/javascript"></script>
