php contact form change

--- a/index.html
+++ b/index.html
@@ -635,6 +635,12 @@ The above copyright notice and this permission notice shall be included in all c
                      <h2>I will contact you shortly</h2>
                   </div>
                </div>
+               <div class="row" id="contact-form-error" style="display: none;">
+                  <div class="col-md-8 ml-auto mr-auto text-center">
+                     <h1>Sorry there was an error with your submission :/</h1>
+                     <h2>please try again later</h2>
+                  </div>
+               </div>
             </div>
          </div>
       </div>
